--- a/app/views/relations/_entities_contacts_form.html.haml
+++ b/app/views/relations/_entities_contacts_form.html.haml
@@ -1,23 +1,5 @@
-=formalize do |f|
-  -f.error :contact
-  -f.title :title
-  -f.field :contact, :name
-  -f.field :contact, :default
-  -f.title :address
-  -f.field :contact, :line_2
-  -f.field :contact, :line_3
-  -f.field :contact, :line_4_number
-  -f.field :contact, :line_4_street
-  -f.field :contact, :line_5
-  -f.field :contact, :line_6_code
-  -f.field :contact, :line_6_city
-  -f.title :canals
-  -f.field :contact, :phone
-  -f.field :contact, :fax
-  -f.field :contact, :mobile
-  -f.field :contact, :email   
-  -f.field :contact, :website
-=javascript_tag("$('contact_name').focus();")
+=render :partial=>"general_description_form"
+=render :partial=>"coordinates_form"
  
 
 
