--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -15,4 +15,4 @@
   -f.field :entity, :website
   -for datum in @complement_data
     -f.field datum.complement.name, {:datatype=>datum.complement.nature.to_sym, :id=>"complement_datum_#{datum.complement_id}_value", :name=>"complement_datum[#{datum.complement_id}][value]", :value=>datum.value, :size=>datum.complement.length_max, :choices=>datum.complement.choices.collect{|x| [x.name , x.id]}  }
-=render :partial=>"entities_contacts_form"
+=render :partial=>"coordinates_form"
