git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@501 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_products_form.html.haml
+++ b/app/views/management/_products_form.html.haml
@@ -13,6 +13,7 @@
   - f.field :product, :service_coeff, :html_options=>{ :id=>:service_coeff }
   - f.field :product, :supply_method, :field=>:radio, :choices=>Product.supply_methods
   - f.field :product, :active
+  - f.field :product, :without_stocks
   - f.field :product, :to_purchase
   - f.field :product, :to_sale
   - f.field :product, :to_rent
