--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -9,10 +9,30 @@
   -f.field :entity, :client
   -f.field :entity, :supplier
   -f.title :details
+  -f.field :entity, :country
+  -f.field :entity, :cee_tva
+  -f.field :entity, :accises
   -f.field :entity, :code
   -f.field :entity, :born_on
   -#f.field :entity, :dead_on
   -f.field :entity, :website
+  -f.field :entity, :comment, :field=>:textarea
   -for datum in @complement_data
     -f.field datum.complement.name, {:datatype=>datum.complement.nature.to_sym, :id=>"complement_datum_#{datum.complement_id}_value", :name=>"complement_datum[#{datum.complement_id}][value]", :value=>datum.value, :size=>datum.complement.length_max, :choices=>datum.complement.choices.collect{|x| [x.name , x.id]}  }
+=formalize(:id=>:client_form) do |f|
+  -f.title :client
+  -f.field :entity, :tva_submissive
+  -f.field :entity, :reflation_submissive
+  -f.field :entity, :discount_rate
+  -f.field :entity, :reduction_rate
+  -f.field :entity, :payments_number
+  -f.field :entity, :deliveries_conditions, :field=>:textarea
 =render :partial=>"coordinates_form"
+:javascript
+  function displayFields(){
+    if ($('entity_client').checked)
+      $('client_form').show();     
+    else
+      $('client_form').hide(); 
+  }
+=observe_field "entity_client", :function=>"displayFields();", :frequency => 0.25
