--- a/app/views/relations/entities_display.html.haml
+++ b/app/views/relations/entities_display.html.haml
@@ -12,6 +12,14 @@
       =evalue @entity, :active
       =evalue @entity, :website unless @entity.website.blank?
     %td
+      =evalue @entity, :cee_tva unless @entity.cee_tva.blank?
+      =evalue @entity, :tva_submissive unless !@entity.client
+      =evalue @entity, :reflation_submissive unless !@entity.client
+      =evalue @entity, :discount_rate unless @entity.discount_rate.blank?
+      =evalue @entity, :reduction_rate unless @entity.reduction_rate.blank?
+      =evalue @entity, :payments_number unless @entity.payments_number.blank?
+      =evalue @entity, :deliveries_conditions unless @entity.deliveries_conditions.blank?
+    %td
       -for datum in @entity.complement_data.find(:all, :joins=>"JOIN complements ON (complements.id=complement_id)", :order=>"position")
         =evalue datum.complement.name, datum.value.to_s
 
