--- a/app/views/management/prices.html.haml
+++ b/app/views/management/prices.html.haml
@@ -1,9 +1,8 @@
 .aclist{:align=>"center"}
-  %strong Afficher
   -form_tag do
+    %label Afficher
     -for mode in @modes
-      =radio_button(:price, :mode , mode[0],:options=>{:checked=>true}),content_tag(:label, tc(mode[0].to_sym))
+      =radio_button(:price, :mode , mode[0], :checked=>( mode[0]==:all ? true : false))+' '+content_tag(:label, tc(mode[0]), :for=>'price_mode_'+mode[0].to_s)
     =select(:price, :supply,Entity.find(:all,:conditions=>{:company_id=>@current_company.id}).collect{|x| [x.full_name,x.id]},:options=>{:include_blank=>true}) 
-    .actions
-      =submit_tag tg"next"
+    =submit_tag tg('filter')
 =dyta :prices
