git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@503 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/products_display.html.haml
+++ b/app/views/management/products_display.html.haml
@@ -13,9 +13,11 @@
     %td
       =evalue @product, :shelf, :url=>{:action=>:shelves_display}
       =evalue @product, :unit, :label=>:label
+      =evalue @product, :weight
       =evalue @product, :active
-      =evalue @product, :to
+      =evalue @product, :without_stocks
     %td
+      =evalue @product, :to
       =evalue @product, :catalog_name
       =evalue @product, :catalog_description
       =evalue @product, :description
