--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -9,7 +9,7 @@
   -f.field :entity, :client
   -f.field :entity, :supplier
   -f.title :details
-  -f.field :entity, :country
+  -f.field :entity, :country,:choices=>countries
   -f.field :entity, :vat_number
   -f.field :entity, :excise
   -f.field :entity, :code
