git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@508 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_coordinates_form.html.haml
+++ b/app/views/relations/_coordinates_form.html.haml
@@ -8,6 +8,7 @@
   -f.field :contact, :line_5
   -f.field :contact, :line_6_code
   -f.field :contact, :line_6_city
+  -f.field :contact, :country, :choices=>countries, :options=>{:include_blank=>true}
   -f.title :canals
   -f.field :contact, :phone
   -f.field :contact, :fax
