--- a/app/views/management/prices.html.haml
+++ b/app/views/management/prices.html.haml
@@ -1,10 +1,11 @@
-.aclist
-  %ul
-    %li
-      -form_tag do
-        %label=tc "display"
-        -for mode in @modes
-          =radio_button(:price, :mode , mode[0], :checked=>( mode[0]==:all ? true : false))+"&nbsp;"+content_tag(:label, tc(mode[0]), :for=>'price_mode_'+mode[0].to_s)
-        =select(:price, :supply,Entity.find(:all,:conditions=>{:company_id=>@current_company.id}).collect{|x| [x.full_name,x.id]},:options=>{:include_blank=>true}) 
-        =submit_tag tg('filter')
+-if @suppliers.size>0
+  .aclist
+    %ul
+      %li
+        -form_tag do
+          %label=tc "display"
+          -for mode in @modes
+            =radio_button(:price, :mode , mode, :checked=>( mode=="all" ? true : false))+"&nbsp;"+content_tag(:label, tc(mode), :for=>'price_mode_'+mode)
+          =select(:price, :supply, @suppliers.collect{|x| [x.full_name,x.id]})
+          =submit_tag tg('filter')
 =dyta :prices
