--- a/app/views/management/sales_deliveries.html.haml
+++ b/app/views/management/sales_deliveries.html.haml
@@ -3,8 +3,10 @@
 = aclist do |l|
   - l.action :sales_print, :id=>@sale_order.id
 
-%h2=tc :undelivered
-=dyta :undelivered_quantities
+-if @undelivered
+  %h2=tc :undelivered
+  =dyta :undelivered_quantities
+
 %h2=tc :deliveries
 %table.dyta
   %tr
