--- a/app/views/management/_deliveries_form.html.haml
+++ b/app/views/management/_deliveries_form.html.haml
@@ -1,20 +1,20 @@
 =formalize do |f|
   -f.error :delivery
   -f.title :infos
-  -f.field :delivery, :contact_id, :choices=>@contacts.collect{|x| [x.address, x.id]}
+  -f.field :delivery, :contact_id, :choices=>@contacts.collect{|x| [x.address, x.id]}, :new=>{:controller=>:relations, :action=>:entities_contacts_create, :id=>@sale_order.client_id}
   -f.field :delivery, :shipped_on
   -f.field :delivery, :delivered_on
 %table.dyta 
   %tr
     %th Produit
-    %th Montant HT
-    %th Montant TTC
+    %th PU HT
+    %th PU TTC
     %th Unité
     %th Quantité totale
     %th Quantité restante
     %th Quantité
   -for @line in @delivery_lines
-    %tr
+    %tr{:class=>cycle('odd','even')}
       %td=@line.order_line.product.name
       %td=@line.order_line.price.amount
       %td=@line.order_line.price.amount_with_taxes
@@ -24,11 +24,13 @@
       %td{:style=>'text-align:center'}
         =text_field_tag "delivery_line[#{@line.order_line_id}][quantity]", @line.quantity, :id=>"delivery_line_#{@line.order_line_id}_quantity"
         =observe_field "delivery_line_#{@line.order_line.id}_quantity", :url=>{:action => :sum_calculate}, :frequency => 0.25, :with=>"Form.serialize('#{@delivery_form}')"
-%table.dyta
-  %tr
-    %td{:style=>'text-align:right'}= "Total de la livraison HT : "
-    %td#sum_total_ht=@delivery.amount
-    %td{:style=>'text-align:right'}= "TTC : "
-    %td#sum_total=@delivery.amount_with_taxes
+.total
+  %table.dyta
+    %tr
+      %th=tc :amount
+      %td#sum_total_ht=@delivery.amount
+    %tr.important
+      %th=tc :amount_with_taxes
+      %td#sum_total=@delivery.amount_with_taxes
 
 
