--- a/app/views/management/sales_deliveries.html.haml
+++ b/app/views/management/sales_deliveries.html.haml
@@ -44,7 +44,7 @@
           %td= lines.amount_with_taxes
           %td
           %td
-- form_tag do
+- form_tag() do
   .actions
     =link_to tg(:previous), :action=>:sales_products
     =submit_tag(tc('invoice'), :action=>:sales_invoices)
