--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -16,6 +16,7 @@ div[xul="box"] { background: #ADA; }
 */
 /*table.entries { border-collapse: collapse; }*/
 
+.invoice { text-align:center; color:#fff; padding:20px 0px 20px; font-size:15px; color: #047; } 
 .entity { text-align:right; }
 /*#lines { height: 300px; overflow: auto; }*/
 #top { /*border-bottom: 1px solid #C9D7F1;*/ height: 24px; }
