--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -16,7 +16,7 @@ div[xul="box"] { background: #ADA; }
 */
 /*table.entries { border-collapse: collapse; }*/
 
-.invoice { text-align:center; color:#fff; padding:20px 0px 20px; font-size:15px; color: #047; } 
+.invoice { text-align:center;  padding:5px 0px 5px; font-size:15px;  background: #FF3300; margin: 20px 600px 20px 600px; }
 .entity { text-align:right; }
 /*#lines { height: 300px; overflow: auto; }*/
 #top { /*border-bottom: 1px solid #C9D7F1;*/ height: 24px; }
