--- a/app/views/resources/_employees_form.html.haml
+++ b/app/views/resources/_employees_form.html.haml
@@ -3,9 +3,10 @@
   - f.field :employee, :title
   - f.field :employee, :first_name
   - f.field :employee, :last_name
-  - f.field :employee, :profession_id,  :choices => @current_company.professions.find(:all).collect {|p| [p.name]}, :new => {:controller => :resource, :action => :professions_create} 
-  - f.field :employee, :user_id,  :choices => @current_company.users.find(:all).collect {|u| [u.name, u.first_name]}, :new => {:controller => :company, :action => :users_create} 
-  - f.field :employee,:department_id,  :choices => @current_company.departments.find(:all).collect {|d| [d.name, d.id]}, :new => {:controller => :company, :action => :departments_create} 
+  - f.field :employee, :commercial
+  - f.field :employee, :profession_id,  :choices => @current_company.professions.find(:all).collect {|p| [p.name, p.id]}, :new => {:action => :professions_create} 
+  - f.field :employee, :user_id, :choices => @current_company.users.find(:all).collect {|u| [u.name, u.id]}, :new => {:controller => :company, :action => :users_create} 
+  - f.field :employee, :department_id, :choices => @current_company.departments.find(:all).collect {|d| [d.name, d.id]}, :new => {:controller => :company, :action => :departments_create} 
   - f.field :employee, :establishment_id, :choices => @current_company.establishments.find(:all).collect {|e| [e.name,e.id]}, :new => {:controller => :company, :action => :establishments_create} 
  
  
