git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@542 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_payments_form.html.haml
+++ b/app/views/management/_payments_form.html.haml
@@ -1,3 +1,9 @@
+.payments
+  %ul
+    %li
+      -form_tag do
+        -for mode in @modes
+          =radio_button(:price, :mode , mode, :checked=>( mode=="new" ? true : false))+"&nbsp;"+content_tag(:label, tc(mode))
 =formalize do |f|
   -f.error :payment
   -f.title :title
