--- a/app/views/management/_payments_form.html.haml
+++ b/app/views/management/_payments_form.html.haml
@@ -10,4 +10,6 @@
   -f.field :payment, :amount
   -f.field :payment, :paid_on
   -f.field :payment, :mode_id, :choices=>PaymentMode.find(:all,:conditions=>{:company_id=>@current_company.id}).collect{|x| [x.name, x.id ]}, :new=>{:action=>:payment_modes_create}
-  -f.field :payment, :account_id, :choices=>@current_company.accounts.find(:all, :conditions=>{:deleted=>false}, :order=>:number).collect{|x| [x.label, x.id]},:options=>{:include_blank=>true}
+  -#f.field :payment, :account_id, :choices=>@current_company.accounts.find(:all, :conditions=>{:deleted=>false}, :order=>:number).collect{|x| [x.label, x.id]},:options=>{:include_blank=>true}
+
+=select :pay, :part, @payments.collect{|x| ["Montant débité : "+x.part_amount.to_s+" Montant du réglement : "+x.amount.to_s+" Montant consommable : "+(x.amount - x.part_amount).to_s , x.id]}
