--- a/app/views/management/_payments_form.html.haml
+++ b/app/views/management/_payments_form.html.haml
@@ -1,15 +1,32 @@
-.payments
-  %ul
-    %li
-      -form_tag do
-        -for mode in @modes
-          =radio_button(:price, :mode , mode, :checked=>( mode=="new" ? true : false))+"&nbsp;"+content_tag(:label, tc(mode))
-=formalize do |f|
+-if @update != true
+  .payments
+    %ul
+      %li
+        -form_tag do
+          -for mode in @modes
+            =radio_button(:price, :mode , mode, :checked=>( mode=="new" ? true : false))+"&nbsp;"+content_tag(:label, tc(mode), :for=>'price_mode_'+mode)
+=formalize(:id=>:new_payment) do |f|
   -f.error :payment
   -f.title :title
   -f.field :payment, :amount
   -f.field :payment, :paid_on
   -f.field :payment, :mode_id, :choices=>PaymentMode.find(:all,:conditions=>{:company_id=>@current_company.id}).collect{|x| [x.name, x.id ]}, :new=>{:action=>:payment_modes_create}
-  -#f.field :payment, :account_id, :choices=>@current_company.accounts.find(:all, :conditions=>{:deleted=>false}, :order=>:number).collect{|x| [x.label, x.id]},:options=>{:include_blank=>true}
 
-=select :pay, :part, @payments.collect{|x| ["Montant débité : "+x.part_amount.to_s+" Montant du réglement : "+x.amount.to_s+" Montant consommable : "+(x.amount - x.part_amount).to_s , x.id]}
+-if @update != true  
+  .paymentpart
+    =select :pay, :part, @payments.collect{|x| [" Montant du réglement : "+x.amount.to_s+" du "+x.created_at.to_date.to_s+" par "+x.mode.name+" -- Montant utilisable : "+(x.amount - x.part_amount).to_s , x.id]}
+
+
+:javascript
+  function payment_type(){
+    if ($('price_mode_new').checked) {
+      $('pay_part').hide();
+      $('new_payment').show();
+                                     }
+    else {
+      $('pay_part').show();
+      $('new_payment').hide();
+         } 
+  }
+  payment_type();
+=observe_field "price_mode_new", :function=>"payment_type();", :frequency => 0.25
