--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -16,8 +16,9 @@ div[xul="box"] { background: #ADA; }
 */
 /*table.entries { border-collapse: collapse; }*/
 
+.paymentpart{ text-align:center; padding: 5px 0 5px 0; }
 .payments { text-align:center }
-.invoice { text-align:center;  padding:5px 0px 5px; font-size:15px;  background: #FF3300; margin: 20px 600px 20px 600px; }
+.invoice { text-align:center;  padding:10px 0px 10px 0; font-size:15px;  background: #FF3300; margin: 20px 600px 20px 600px; }
 .entity { text-align:right; }
 /*#lines { height: 300px; overflow: auto; }*/
 #top { /*border-bottom: 1px solid #C9D7F1;*/ height: 24px; }
