--- a/app/views/management/sales_payments.html.haml
+++ b/app/views/management/sales_payments.html.haml
@@ -1,7 +1,7 @@
 =sales_steps
 
 %h2=tc :payments
-=dyta :payments
+=dyta :payment_parts
 
 - form_tag do
   .actions
@@ -12,12 +12,12 @@
 %h2=tc :financial_state
 %table.dyta
   %tr
-    %th{:colspan=>3}= tc(:invoices)
+    %th{:colspan=>3,:style=>"border-right: solid 1px red;"}= tc(:invoices)
     %th{:colspan=>3}= tc(:payments)
   %tr
     %th= tc(:number)
     %th= tc(:payment_on)
-    %th= tc(:amount_wt)
+    %th{:style=>"border-right: solid 1px red;"}= tc(:amount_wt)
     %th= tc(:paid_on)
     %th= tc(:payment_mode)
     %th= tc(:amount_wt)
@@ -28,24 +28,31 @@
       %tr
         %td= @invoices[x].number 
         %td= @invoices[x].payment_on
-        %td= @invoices[x].amount_with_taxes
+        %td{:style=>"border-right: solid 1px red;"}= @invoices[x].amount_with_taxes
+        %td 
+        %td
+        %td 
     -else
-      %tr
-        %td
-        %td
-        %td
       -if @payments[x].nil?
         -exist = false
     -if !@payments[x].nil?
       %tr
-        %td= @payments[x].paid_on 
-        %td= @payments[x].mode.name
+        %td 
+        %td
+        %td{:style=>"border-right: solid 1px red;"}
+        %td= @payments[x].payment.paid_on
+        %td= @payments[x].payment.mode.name
         %td= @payments[x].amount
     -else
-      %tr
-        %td
-        %td
-        %td
       -if @invoices[x].nil?
         -exist = false
     -x += 1
+  .total
+    %tr
+      %th{:colspan=>2}=tc :invoices_total
+      %td{:colspan=>1, :style=>"border-right: solid 1px red;"}= @invoices_sum
+      %th{:colspan=>2}=tc :payments_total
+      %td{:colspan=>1}= @payments_sum
+
+.balance
+  %h3=tc(:rest_to_pay)+" : "+(@invoices_sum - @payments_sum).to_s
