--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -255,6 +255,7 @@ table.dyta tr.details td.comment { padding: 10px; font-size:15px; }
 .avindex {margin-top:30px;  padding: 10px 0 10px 0; }
 .update{ text-align:center; margin-top:8px; font-size:15px;}
 
+.balance { text-align:center;margin-left:600px; margin-right:700px; margin-top:20px; padding:20px;border: 1px solid #BACFE6;}
 .total { text-align: right; }
 .total table { border-collapse: collapse; width: 100%; }
 .total table.dyta td { font-weight: bold; border: 1px solid #BACFE6; padding: 4px 8px; font-size: 17px; }
