git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@554 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/sales_payments.html.haml
+++ b/app/views/management/sales_payments.html.haml
@@ -27,8 +27,7 @@
     -if !@invoices[x].nil?
       %tr
         %td= @invoices[x].number 
-        %td= @invoices[x].payment_on
-        %td{:style=>"border-right: solid 1px red;"}= @invoices[x].amount_with_taxes
+        %td= @invoices[x].payment_on        %td{:style=>"border-right: solid 1px red;"}= @invoices[x].amount_with_taxes
         %td 
         %td
         %td 
