--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -27,7 +27,7 @@ div[xul="box"] { background: #ADA; }
 #main { overflow: auto; border-top: 1px solid #95b0e4; }
 #content { overflow: auto; border-right:8px solid #C9D7F1; border-left:8px solid #C9D7F1; }
 #legals { margin:0; padding:4px 8px; background: #C9D7F1; font-size:13px; color: #047; text-align: center; }
-#yield { padding: 8px; overflow: auto; background: url(/images/template/columns.png) repeat-x top; border: 1px solid #95b0e4; }
+#yield { padding: 8px; overflow: auto; background: url(../images/template/columns.png) repeat-x top; border: 1px solid #95b0e4; }
 #yield > h1 { margin: 0px 0px 8px; font-size:20px; color: #047;}
 #yield > h2 { margin: 16px 0px 4px; font-size:16px; color: #06A;}
 #yield li { color:#047; padding: 1px; }
@@ -41,7 +41,7 @@ div[xul="box"] { background: #ADA; }
 #help .nav { background: #e9e9a8; }
 #help .title { color: #750; text-align: center; }
 
-#help { border-left: 1px solid #BEBEBB; border-top: 1px solid #BEBEBB; background: #fefef9 url(/images/template/help.png) repeat-x top;}
+#help { border-left: 1px solid #BEBEBB; border-top: 1px solid #BEBEBB; background: #fefef9 url(../images/template/help.png) repeat-x top;}
 #help .content { padding: 8px; }
 #help .content h1 { font-size: 17px; margin: 0px 0px 16px; color: #750;}
 #help .content h2 { font-size: 15px; margin: 8px 8px 4px;  border-bottom: 1px solid #dd8;}
@@ -60,15 +60,15 @@ div[xul="box"] { background: #ADA; }
 /*#side .aclist h2 { font-size : 13px; color: white; padding: 2px 4px; background: #46A; text-align: center; }*/
 #side .aclist h2 { font-size : 13px; color: #00223B; padding: 2px 4px; background: #95b0e4; text-align: center; }
 #side .aclist ul { padding: 0px 2px; }
-#side .aclist li { padding: 2px 4px 4px 20px; list-style-type: none; background: url(/images/favicon.png) no-repeat center left; } /*background: #e9f3fe url(/images/template/table_head.png) repeat-x bottom; }*/
+#side .aclist li { padding: 2px 4px 4px 20px; list-style-type: none; background: url(../images/favicon.png) no-repeat center left; } /*background: #e9f3fe url(../images/template/table_head.png) repeat-x bottom; }*/
 #side .aclist li a { font-size: 11px; }
-/*#side .aclist li:hover { background: #FFC url(/images/template/action.png) repeat-x bottom; }*/
+/*#side .aclist li:hover { background: #FFC url(../images/template/action.png) repeat-x bottom; }*/
 
 /*
-#help { width: 150px; border-left: 1px dotted #dd8; background: #fffee3 url(/images/template/help.png) repeat-x top;}
+#help { width: 150px; border-left: 1px dotted #dd8; background: #fffee3 url(../images/template/help.png) repeat-x top;}
 //#help > h2 { background: #C9D7F1; font-size: 20px; text-align:center; height:24px; padding:4px; vertical-align: center; }
 #help .nav { height: 32px; }
-#help .light { color: #fff; font-size: 20px;  height: 24px; padding:4px; overflow:hidden; text-align: center; background: #C9D7F1 url(/images/template/help-end.png) no-repeat top right;}
+#help .light { color: #fff; font-size: 20px;  height: 24px; padding:4px; overflow:hidden; text-align: center; background: #C9D7F1 url(../images/template/help-end.png) no-repeat top right;}
 #help .content { text-align: justify;}
 #help .content .data { padding: 8px;}
 #help .content .data .data { padding: 0px; }
@@ -76,18 +76,18 @@ div[xul="box"] { background: #ADA; }
 #help .content h2 { font-size: 15px; margin: 8px 8px 4px;  border-bottom: 1px solid #dd8;}
 #help .content h3 { font-size: 13px; margin: 4px 16px 2px; color: #430; }
 #help .content .text-end { height: 1px; }
-#help .content .help-error { color:white; text-align: center; padding: 8px; font-weight:bold; background:#f00 url(/images/template/help-error.png) bottom repeat-x;}
+#help .content .help-error { color:white; text-align: center; padding: 8px; font-weight:bold; background:#f00 url(../images/template/help-error.png) bottom repeat-x;}
 */
 .help-link { float:right; }
 .help-link > a > div { width: 32px; height:32px; }
-#help-begin { background: url(/images/template/help-begin.png); height:32px; width:16px;}
-#help-web { background: url(/images/template/help-web.png); }
-/*#help-open { background: url(/images/template/help-open.png); }*/
+#help-begin { background: url(../images/template/help-begin.png); height:32px; width:16px;}
+#help-web { background: url(../images/template/help-web.png); }
+/*#help-open { background: url(../images/template/help-open.png); }*/
 .help-link { padding: 7px 8px;}
 .help-link a { padding: 4px; font-size: 13px; color: #750; background: #e9e9a8; }
-#help-open a { background: url(/images/buttons/help.png) no-repeat scroll left center; padding-left:20px; }
-#help-close a { background: url(/images/buttons/close.png) no-repeat scroll left center; padding-left:20px; }
-#help-previous a { background: url(/images/buttons/previous.png) no-repeat scroll left center; padding-left:20px; }
+#help-open a { background: url(../images/buttons/help.png) no-repeat scroll left center; padding-left:20px; }
+#help-close a { background: url(../images/buttons/close.png) no-repeat scroll left center; padding-left:20px; }
+#help-previous a { background: url(../images/buttons/previous.png) no-repeat scroll left center; padding-left:20px; }
 /*.help-t { float:right; margin:20px;}*/
 
 #guide { float:left; height:24px; margin-top:4px; }
@@ -163,7 +163,7 @@ table.document td { font-size:15px; }
 /*
 a.guide:link, a.guide:visited, a.guide:hover{ color: white; font-size:18px; }
 a.guide { float: left; }
-a.guide > div { width: 220px; height:58px; background: url(/images/template/guide.png) no-repeat top left; text-align:center; padding: 180px 18px 18px; }
+a.guide > div { width: 220px; height:58px; background: url(../images/template/guide.png) no-repeat top left; text-align:center; padding: 180px 18px 18px; }
 */
 table.invex, table.invisible { border-collapse: collapse; }
 table.invex, table.flex { width: 100% }
@@ -227,7 +227,7 @@ table.formalize a.fastadd { margin: 0px 8px; }
 
 h3.dyta {padding:4px;color: #139; font-size: 16px; }
 table.dyta { border-collapse: collapse; width: 100%; border-bottom: 1px solid #BACFE6;}
-table.dyta th { background: #e9f3fe url(/images/template/table_head.png) repeat-x bottom; padding:2px; color: #336; font-weight: bold; font-size:13px;}
+table.dyta th { background: #e9f3fe url(../images/template/table_head.png) repeat-x bottom; padding:2px; color: #336; font-weight: bold; font-size:13px;}
 table.dyta tr.odd  td {background: #E1E6FF;}
 table.dyta tr.even td {background: #F0F2FF;}
 table.dyta tr.root td { font-weight: bold; }
@@ -237,7 +237,7 @@ table.dyta tr.odd  td.act { background: #FDD; }
 table.dyta tr.even td.act { background: #FED; }
 table.dyta td.procedures { padding:4px; background: #FEB; }
 table.dyta td.procedures > a {padding: 4px;}
-table.dyta td.procedures > a.procedure.create {padding-left: 20px; background: url(/images/buttons/create.png) no-repeat center left;}
+table.dyta td.procedures > a.procedure.create {padding-left: 20px; background: url(../images/buttons/create.png) no-repeat center left;}
 table.dyta td.empty { text-align:center; color: #777; padding:4px; background: #EEF; }
 table.dyta th, table.dyta td.empty, table.dyta td.procedures { border-top: 1px solid #BACFE6; }
 table.dyta th, table.dyta td { border-left: 1px solid #BACFE6; border-right: 1px solid #BACFE6; }
@@ -265,16 +265,16 @@ table.dyta tr.details td.comment { padding: 10px; font-size:15px; }
 a.right { float:right; }
 
 /* BEGIN BUTTON STYLES */
-input[type="submit"] { text-decoration:none; border:1px solid #BBB; color:#444; background: #CCC url(/images/template/button.png) repeat-x top; -moz-border-radius: 4px; padding:1px 5px 2px; }
-input[type="submit"]:hover { border:2px solid #DA4; color: #555; text-decoration:none; background: #DDD url(/images/template/button_hover.png) repeat-x top; }
-input[type="submit"]:active, input[type="submit"]:focus { border:2px solid #68C; color: #555; text-decoration:none; background: #CCC url(/images/template/button_hover.png) repeat-x top; }
+input[type="submit"] { text-decoration:none; border:1px solid #BBB; color:#444; background: #CCC url(../images/template/button.png) repeat-x top; -moz-border-radius: 4px; padding:1px 5px 2px; }
+input[type="submit"]:hover { border:2px solid #DA4; color: #555; text-decoration:none; background: #DDD url(../images/template/button_hover.png) repeat-x top; }
+input[type="submit"]:active, input[type="submit"]:focus { border:2px solid #68C; color: #555; text-decoration:none; background: #CCC url(../images/template/button_hover.png) repeat-x top; }
 input[type="submit"]:hover, input[type="submit"]:active, input[type="submit"]:focus { padding:0px 4px 1px; }
 /*
-input[type="submit"], a.button:link, a.button:visited { text-decoration:none; border:1px solid #BBB; color:#444; background: #CCC url(/images/template/button.png) repeat-x top; -moz-border-radius: 4px;}
+input[type="submit"], a.button:link, a.button:visited { text-decoration:none; border:1px solid #BBB; color:#444; background: #CCC url(../images/template/button.png) repeat-x top; -moz-border-radius: 4px;}
 input[type="submit"] { padding:1px 5px 2px; }
 a.button:link, a.button:visited { padding: 3px 8px;}
-input[type="submit"]:hover, a.button:hover { border:2px solid #DA4; color: #555; text-decoration:none; background: #DDD url(/images/template/button_hover.png) repeat-x top; }
-input[type="submit"]:active, a.button:active, input[type="submit"]:focus, a.button:focus { border:2px solid #68C; color: #555; text-decoration:none; background: #CCC url(/images/template/button_hover.png) repeat-x top; }
+input[type="submit"]:hover, a.button:hover { border:2px solid #DA4; color: #555; text-decoration:none; background: #DDD url(../images/template/button_hover.png) repeat-x top; }
+input[type="submit"]:active, a.button:active, input[type="submit"]:focus, a.button:focus { border:2px solid #68C; color: #555; text-decoration:none; background: #CCC url(../images/template/button_hover.png) repeat-x top; }
 input[type="submit"]:hover, input[type="submit"]:active, input[type="submit"]:focus { padding:0px 4px 1px; }
 a.button:hover, a.button:active, a.button:focus { padding: 2px 7px;}
 */
@@ -305,12 +305,12 @@ h2.form { font-size: 15px; margin: 8px 0px 4px; border-bottom: 1px solid #C9D7F1
 .stepper .right, .stepper .left  { background: #ED9; border: 1px solid #DB7;}
 */
 .stepper td { height: 32px;}
-.stepper td.step { text-align:center; background: url(/images/template/stepper_default.png) bottom; }
-.stepper td.step.active { background: url(/images/template/stepper_active.png) bottom; }
-.stepper td.transit { background: url(/images/template/stepper_transit.png) bottom; width:14px; }
-.stepper td.transit.left { background: url(/images/template/stepper_left.png) bottom; }
-.stepper td.transit.right { background: url(/images/template/stepper_right.png) bottom; }
-.stepper td.side { text-align:center; background: url(/images/template/stepper_default.png) bottom; width:32px; }
+.stepper td.step { text-align:center; background: url(../images/template/stepper_default.png) bottom; }
+.stepper td.step.active { background: url(../images/template/stepper_active.png) bottom; }
+.stepper td.transit { background: url(../images/template/stepper_transit.png) bottom; width:14px; }
+.stepper td.transit.left { background: url(../images/template/stepper_left.png) bottom; }
+.stepper td.transit.right { background: url(../images/template/stepper_right.png) bottom; }
+.stepper td.side { text-align:center; background: url(../images/template/stepper_default.png) bottom; width:32px; }
 .stepper td.side.first { -moz-border-radius-topleft: 16px; -moz-border-radius-bottomleft: 16px;}
 .stepper td.side.last { -moz-border-radius-topright: 16px; -moz-border-radius-bottomright: 16px;}
 
@@ -332,8 +332,8 @@ input[type="text"].invalid:focus, input[type="password"].invalid:focus, textarea
 
 
 #login { width:512px; border: 1px solid #95b0e4; margin:64px auto; background:#c9d7f1; z-index: 1000;}
-#login .logoban { height:80px; background: url(/images/ekylong.png) no-repeat center; margin: 16px;}
-#login h2 { background: url(/images/template/gradient.png) repeat-x top; color:white; padding: 2px; text-align:center; font-size:18px;}
+#login .logoban { height:80px; background: url(../images/ekylong.png) no-repeat center; margin: 16px;}
+#login h2 { background: url(../images/template/gradient.png) repeat-x top; color:white; padding: 2px; text-align:center; font-size:18px;}
 #login table { border-collapse: collapse;  margin:16px auto; margin-left:auto; margin-right:auto;}
 #login table tr td { padding: 2px 4px;}
 #login table tr td.label { text-align:right;}
