--- a/app/views/management/_deliveries_form.html.haml
+++ b/app/views/management/_deliveries_form.html.haml
@@ -2,8 +2,9 @@
   -f.error :delivery
   -f.title :infos
   -f.field :delivery, :contact_id, :choices=>@contacts.collect{|x| [x.address, x.id]}, :new=>{:controller=>:relations, :action=>:entities_contacts_create, :id=>@sale_order.client_id} 
-  -f.field :delivery, :shipped_on
-  -f.field :delivery, :delivered_on
+  -f.field :delivery, :nature, :choices=>Delivery.natures
+  -f.field :delivery, :planned_on
+  -f.field :delivery, :moved_on
 %table.dyta 
   %tr
     %th Produit
