--- a/app/views/management/_products_form.html.haml
+++ b/app/views/management/_products_form.html.haml
@@ -14,10 +14,16 @@
   - f.field :product, :service_coeff, :html_options=>{ :id=>:service_coeff }
   - f.field :product, :supply_method, :field=>:radio, :choices=>Product.supply_methods
   - f.field :product, :active
-  - f.field :product, :without_stocks
   - f.field :product, :to_purchase
   - f.field :product, :to_sale
   - f.field :product, :to_rent
+  - f.field :product, :without_stocks
+=formalize(:id=>:stocks) do |f|
+  - f.title :stocks
+  - f.field :product, :quantity_min
+  - f.field :product, :critic_quantity_min
+  - f.field :product, :quantity_max
+=formalize do |f|
   - f.title :description
   - f.field :product, :catalog_name
   - f.field :product, :catalog_description, :field=>:textarea
@@ -27,5 +33,15 @@
   - f.field :product, :account_id, :choices=>@current_company.accounts.find(:all, :conditions=>['deleted=false AND number LIKE ?','70%'], :order=>:number).collect{|x| [x.label, x.id]}, :new=>{:controller=>:accountancy, :action=>:accounts_create}
 =javascript_tag("function display_service_coeff(element) { var sc=$('service_coeff'); if (element.checked) { sc.style.display=''; } else { sc.style.display='none'; }; return false; }\ndisplay_service_coeff($('product_nature_service'));")
 =observe_field("product_name", :frequency =>0.25, :function => "var cn = $('product_catalog_name'); cn.value = value;")
-=observe_field("product_nature_service", :frequency =>0.25, :function => "display_service_coeff(element);")
+=observe_field("product_nature_service", :frequency =>0.25, :function => "display_service_coeff(element);" )
 
+:javascript
+  function stocks(){
+    if($('product_without_stocks').checked)
+      $('stocks').hide();
+    else
+      $('stocks').show();
+  }
+  stocks();
+
+=observe_field("product_without_stocks", :frequency=>0.25, :function=> "stocks();")
