--- a/app/views/accountancy/_entries_form.html.haml
+++ b/app/views/accountancy/_entries_form.html.haml
@@ -1,7 +1,7 @@
 =formalize do |f|
   - f.error :entry
   - f.field :entry, :name
-  - f.field :entry, :account_id, :choices=>@current_company.accounts.find(:all,  :order=>:name).collect{|x| [x.number, x.id]}
+  - f.field :entry, :account_id, :choices=>@current_company.accounts.find(:all,  :order=>:number).collect{|x| [x.label, x.id]}
   - f.field :entry, :currency_debit
   - f.field :entry, :currency_credit
 
