--- a/app/views/accountancy/entries.html.haml
+++ b/app/views/accountancy/entries.html.haml
@@ -8,7 +8,7 @@
   - form_tag(:action => :params_entries) do
     =formalize do |f|
       - f.field tc(:select_financialyear), select_tag("financialyear_id", options_for_select(@financialyears.collect{|j| [j.code.to_s, j.id.to_s]}, session[:entries][:financialyear].to_s))
-      - f.field tc(:select_journal), select_tag("journal_id", options_for_select(@journals.collect{|j| [tc(:journal_x, :name=>j.name, :closed_on=>j.closed_on.to_s), j.id]}, session[:entries][:journal].to_s))
+      - f.field tc(:select_journal), select_tag("journal_id", options_for_select(@journals.collect{|j| [tc(:journal_x, :name=>j.name, :closed_on=>j.closed_on.to_s), j.id]}, session[:entries][:journal].to_i))
       - f.field tc(:number_records), text_field_tag("number", session[:entries][:records_number], :size=>2, :tabindex => 1)
     .actions
       =submit_tag tg('apply')
