--- a/app/views/management/_products_form.html.haml
+++ b/app/views/management/_products_form.html.haml
@@ -20,6 +20,8 @@
   - f.field :product, :without_stocks
 =formalize(:id=>:stocks) do |f|
   - f.title :stocks
+  -# if @stock_locations.size > 1
+    =#select(:stock, :location, @stock_locations.collect{|x| [x.name, x.id]})
   - f.field :product, :quantity_min
   - f.field :product, :critic_quantity_min
   - f.field :product, :quantity_max
