--- a/app/views/management/purchases_products.html.haml
+++ b/app/views/management/purchases_products.html.haml
@@ -17,4 +17,4 @@
 - form_tag do
   .actions
     =link_to tg(:previous), :action=>:purchases
-    =#submit_tag(tc('order_print'), :action=>:purchase_print) if @purchase_order.lines.size>0
+    =submit_tag(tc('validate'), :action=>:purchases_products) if @purchase_order.lines.size>0
