--- a/app/views/management/purchases_products.html.haml
+++ b/app/views/management/purchases_products.html.haml
@@ -17,4 +17,5 @@
 - form_tag do
   .actions
     =link_to tg(:previous), :action=>:purchases
-    =submit_tag(tc('validate'), :action=>:purchases_products) if @purchase_order.lines.size>0
+    - if @purchase_order.shipped == false
+      =submit_tag(tc('validate'), :action=>:purchases_products) if @purchase_order.lines.size>0
