git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@577 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_entries.html.haml
+++ b/app/views/accountancy/_entries.html.haml
@@ -33,7 +33,7 @@
         %th=tc :record_credit
         %th
         %th
-      - @records.each do |record|
+      - @records.flatten.each do |record|
         - attr = cycle("even","odd")  
         - record.entries.each do |entry|
           %tr{ :class=>(entry.record.balanced ? "balanced" : "unbalanced")+" "+attr}
