--- a/app/views/management/_products_form.html.haml
+++ b/app/views/management/_products_form.html.haml
@@ -20,11 +20,11 @@
   - f.field :product, :without_stocks
 =formalize(:id=>:stocks) do |f|
   - f.title :stocks
-  - f.field :products_stock, :quantity_min
-  - f.field :products_stock, :critic_quantity_min
-  - f.field :products_stock, :quantity_max
+  - f.field :product_stock, :quantity_min
+  - f.field :product_stock, :critic_quantity_min
+  - f.field :product_stock, :quantity_max
   - if @stock_locations.size > 1
-    - f.field :products_stock, :location_id, :choices=>@stock_locations.collect{|x| [x.name, x.id]}
+    - f.field :product_stock, :location_id, :choices=>@stock_locations.collect{|x| [x.name, x.id]}
 =formalize do |f|
   - f.title :description
   - f.field :product, :catalog_name
@@ -37,7 +37,7 @@
 =observe_field("product_name", :frequency =>0.25, :function => "var cn = $('product_catalog_name'); cn.value = value;")
 =observe_field("product_nature_service", :frequency =>0.25, :function => "display_service_coeff(element);" )
 -if request.url.to_s.include? "update"
-  =observe_field("products_stock_location_id", :url=>{:action=>:change_quantities}, :frequency=>0.25, :with=>"products_stock_location_id")
+  =observe_field("product_stock_location_id", :url=>{:action=>:change_quantities}, :frequency=>0.25, :with=>"product_stock_location_id")
 
 :javascript
   function stocks(){
