--- a/app/views/management/sales_products.html.haml
+++ b/app/views/management/sales_products.html.haml
@@ -18,4 +18,7 @@
 - form_tag do
   .actions
     =link_to tg(:previous), :action=>:sales_general
-    =submit_tag(tc('estimate_to_order'), :action=>:sales_deliveries) if @sale_order.lines.size>0
+    - if @sale_order.state == 'P' and @sale_order.lines.size>0
+      =submit_tag(tc('estimate_to_order'), :action=>:sales_deliveries)
+    - elsif @sale_order.lines.size>0
+      =link_to tc('deliveries'), :action=>:sales_deliveries, :id=>@sale_order.id
