git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@582 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/undelivered_sales.html.haml
+++ b/app/views/management/undelivered_sales.html.haml
@@ -9,7 +9,7 @@
         %th= tc 'amount'
         %th= tc 'amount_with_taxes'
         %th= tc 'to_deliver'   
-      -for @delivery in @deliveriesx52
+      -for @delivery in @deliveries
       -klass=cycle("odd","even")+" "+@delivery.moment.to_s
         %tr{:class=>klass+' root '}
           %td{:colspan=>2}=tc('client')+@delivery.order.client.full_name.to_s+tc('to')+@delivery.contact.address.to_s
