git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@594 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_location_choice.html.haml
+++ b/app/views/management/_location_choice.html.haml
@@ -1,5 +1,5 @@
 -form_tag do
   -if @stock_locations.size > 1
     .actions
-      = tc('select_stock_location'), select(:stock, :location, @stock_locations.collect{|x| [x.name, x.id]})
+      = tc('select_stock_location'), select(:product_stock, :location_id, @stock_locations.collect{|x| [x.name, x.id]})
       = submit_tag(tg('filter'), :action=>:undelivered_sales)
