--- a/app/views/management/index.html.haml
+++ b/app/views/management/index.html.haml
@@ -6,5 +6,5 @@
   - if @product_stocks.size > 0
     %h2= tc('low_stocks')
     .stocks 
-      =render :partial=>"stocks"
+      =render :partial=>"stock_indicator"
 =menu_index
