--- a/app/views/management/_stocks.html.haml
+++ b/app/views/management/_stocks.html.haml
@@ -1,23 +1,1 @@
-
-- form_tag do
-  %table.dyta
-    %tr
-      %th= tc 'name'
-      %th= tc 'unit'
-      %th= tc 'weight'
-      %th= tc 'stock_max'
-      %th= tc 'stock_min'
-      %th= tc 'critic_stock_min'
-      %th= tc 'current_virtual_quantity'
-      %th= tc 'current_real_quantity'
-    -for @product_stock in @product_stocks
-    -klass=cycle("odd","even")+" "+@product_stock.state
-      %tr{:class=>klass}
-        %td= link_to @product_stock.product.name, :action=>:products_display, :id=>@product_stock.product_id
-        %td= @product_stock.product.unit.label
-        %td= @product_stock.product.weight
-        %td= @product_stock.quantity_max
-        %td= @product_stock.quantity_min
-        %td= @product_stock.critic_quantity_min
-        %td= @product_stock.current_virtual_quantity
-        %td= @product_stock.current_real_quantity
+=dyta :product_stocks
